--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ a:hover{
     display: inline-block;
 }
 html, body{
-    height: 100%;
+    min-height: 100%;
+	height: 100%;
 }
 .hidden{
     display: none;
@@ -45,10 +46,9 @@ body{
 
 /*    --------------- стили страницы       */
 .wrapper{
-    height: 100%;
     position: relative;
-    background-image: url("../images/background/carbon_texture1882.jpg");
-    background-size: contain;
+	min-height: 100%;
+    background-image: url("../images/background/carbon_texture1882.png");
 }
 .container{
     position: relative;
