--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,14 @@ body{
     color: #000;
     font-weight: bold;
 }
-
-
+.register > a.button{
+	display:none;
+}
+/*
 #register{
     height: 0;
     overflow: hidden;
-}
+}*/
 .logout{
     margin-right: 20px;
 }
